// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`orderedConditionalTree flattenOrderedConditionalTree should flatten a nested tree 1`] = `
Array [
  Object {
    "conditions": Array [
      Object {
        "dependencies": Array [
          "test",
        ],
        "if": "test",
      },
      Object {
        "dependencies": Array [
          "test3",
        ],
        "if": "test3",
        "not": true,
      },
      Object {
        "dependencies": Array [
          "test2",
        ],
        "if": "test2",
      },
    ],
    "contents": Array [
      Object {
        "tag": "String",
        "value": "NestedWithThreeConditions",
      },
    ],
    "tag": "If",
  },
  Object {
    "conditions": Array [
      Object {
        "dependencies": Array [
          "test",
        ],
        "if": "test",
      },
    ],
    "contents": Array [
      Object {
        "tag": "String",
        "value": "NestedWithOneCondition",
      },
    ],
    "tag": "If",
  },
  Object {
    "conditions": Array [],
    "contents": Array [
      Object {
        "tag": "String",
        "value": "NotNested",
      },
    ],
    "tag": "If",
  },
  Object {
    "conditions": Array [
      Object {
        "dependencies": Array [
          "test4",
        ],
        "if": "test4",
      },
    ],
    "contents": Array [
      Object {
        "tag": "String",
        "value": "SecondNestedWithOneCondition",
      },
    ],
    "tag": "If",
  },
]
`;

exports[`orderedConditionalTree flattenOrderedConditionalTree should merge adjacent items with similar conditions 1`] = `
Array [
  Object {
    "conditions": Array [
      Object {
        "dependencies": Array [
          "test",
        ],
        "if": "test",
      },
      Object {
        "dependencies": Array [
          "test2",
        ],
        "if": "test2",
      },
    ],
    "contents": Array [
      Object {
        "tag": "String",
        "value": "TestOne",
      },
      Object {
        "tag": "String",
        "value": "TestTwo",
      },
      Object {
        "tag": "String",
        "value": "TestThree",
      },
    ],
    "tag": "If",
  },
]
`;

exports[`orderedConditionalTree mergeOrderedConditionalTrees should merge differently ordered trees 1`] = `
Array [
  Object {
    "tag": "String",
    "value": "TestZero",
  },
  Object {
    "tag": "String",
    "value": "TestFour",
  },
  Object {
    "conditions": Array [
      Object {
        "dependencies": Array [
          "test",
        ],
        "if": "test",
      },
    ],
    "contents": Array [
      Object {
        "tag": "String",
        "value": "TestOne",
      },
    ],
    "tag": "If",
  },
  Object {
    "conditions": Array [
      Object {
        "dependencies": Array [
          "test2",
        ],
        "if": "test2",
      },
    ],
    "contents": Array [
      Object {
        "conditions": Array [
          Object {
            "dependencies": Array [
              "test3",
            ],
            "if": "test3",
          },
        ],
        "contents": Array [
          Object {
            "tag": "String",
            "value": "TestFive",
          },
        ],
        "tag": "If",
      },
      Object {
        "conditions": Array [
          Object {
            "dependencies": Array [
              "test",
            ],
            "if": "test",
          },
        ],
        "contents": Array [
          Object {
            "tag": "String",
            "value": "TestTwo",
          },
          Object {
            "tag": "String",
            "value": "TestThree",
          },
          Object {
            "tag": "String",
            "value": "TestSix",
          },
        ],
        "tag": "If",
      },
    ],
    "tag": "If",
  },
  Object {
    "conditions": Array [
      Object {
        "dependencies": Array [
          "test",
        ],
        "if": "test",
      },
    ],
    "contents": Array [
      Object {
        "tag": "String",
        "value": "TestSeven",
      },
    ],
    "tag": "If",
  },
]
`;

exports[`orderedConditionalTree mergeOrderedConditionalTrees should merge differently ordered trees 2`] = `
Array [
  Object {
    "tag": "String",
    "value": "TestFour",
  },
  Object {
    "tag": "String",
    "value": "TestZero",
  },
  Object {
    "conditions": Array [
      Object {
        "dependencies": Array [
          "test",
        ],
        "if": "test",
      },
    ],
    "contents": Array [
      Object {
        "tag": "String",
        "value": "TestOne",
      },
    ],
    "tag": "If",
  },
  Object {
    "conditions": Array [
      Object {
        "dependencies": Array [
          "test2",
        ],
        "if": "test2",
      },
    ],
    "contents": Array [
      Object {
        "conditions": Array [
          Object {
            "dependencies": Array [
              "test3",
            ],
            "if": "test3",
          },
        ],
        "contents": Array [
          Object {
            "tag": "String",
            "value": "TestFive",
          },
        ],
        "tag": "If",
      },
      Object {
        "conditions": Array [
          Object {
            "dependencies": Array [
              "test",
            ],
            "if": "test",
          },
        ],
        "contents": Array [
          Object {
            "tag": "String",
            "value": "TestSix",
          },
          Object {
            "tag": "String",
            "value": "TestTwo",
          },
          Object {
            "tag": "String",
            "value": "TestThree",
          },
        ],
        "tag": "If",
      },
    ],
    "tag": "If",
  },
  Object {
    "conditions": Array [
      Object {
        "dependencies": Array [
          "test",
        ],
        "if": "test",
      },
    ],
    "contents": Array [
      Object {
        "tag": "String",
        "value": "TestSeven",
      },
    ],
    "tag": "If",
  },
]
`;

exports[`orderedConditionalTree unflattenOrderedConditionalTree should collapse deep and unbranching conditional paths 1`] = `
Array [
  Object {
    "conditions": Array [
      Object {
        "dependencies": Array [
          "test",
        ],
        "if": "test",
      },
      Object {
        "dependencies": Array [
          "test2",
        ],
        "if": "test2",
      },
    ],
    "contents": Array [
      Object {
        "conditions": Array [
          Object {
            "dependencies": Array [
              "test3",
            ],
            "if": "test3",
          },
        ],
        "contents": Array [
          Object {
            "tag": "String",
            "value": "TestA",
          },
          Object {
            "tag": "String",
            "value": "TestB",
          },
        ],
        "tag": "If",
      },
      Object {
        "tag": "String",
        "value": "TestC",
      },
      Object {
        "conditions": Array [
          Object {
            "dependencies": Array [
              "test3",
            ],
            "if": "test3",
          },
        ],
        "contents": Array [
          Object {
            "tag": "String",
            "value": "TestD",
          },
        ],
        "tag": "If",
      },
    ],
    "tag": "If",
  },
  Object {
    "tag": "String",
    "value": "TestE",
  },
]
`;

exports[`orderedConditionalTree unflattenOrderedConditionalTree should unflatten a list 1`] = `
Array [
  Object {
    "conditions": Array [
      Object {
        "dependencies": Array [
          "test",
        ],
        "if": "test",
      },
    ],
    "contents": Array [
      Object {
        "conditions": Array [
          Object {
            "dependencies": Array [
              "test2",
            ],
            "if": "test2",
          },
        ],
        "contents": Array [
          Object {
            "tag": "String",
            "value": "TestA",
          },
          Object {
            "tag": "String",
            "value": "TestB",
          },
          Object {
            "tag": "String",
            "value": "TestC",
          },
          Object {
            "conditions": Array [
              Object {
                "dependencies": Array [
                  "test3",
                ],
                "if": "test3",
              },
            ],
            "contents": Array [
              Object {
                "tag": "String",
                "value": "TestD",
              },
            ],
            "tag": "If",
          },
        ],
        "tag": "If",
      },
      Object {
        "conditions": Array [
          Object {
            "dependencies": Array [
              "test3",
            ],
            "if": "test3",
          },
        ],
        "contents": Array [
          Object {
            "tag": "String",
            "value": "TestE",
          },
        ],
        "tag": "If",
      },
    ],
    "tag": "If",
  },
  Object {
    "tag": "String",
    "value": "TestF",
  },
]
`;
